[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_cdavies"
version = "0.0.1"
authors = [
    {name = "Cassandra Davies", email = "cdavies2021@gmail.com"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CSE]E*"]

[project.urls]
Homepage = https://github.com/cdavies2/packaging_test